@@ -34,6 +34,8 @@ Changes for 1.3.6
    Remember last skeletal/frame selection for new animation window
    Stop playing animation when a new animation is added.
    Error message when attempting to paste animation frame of wrong type
+   Fixed bug where an influences with a weight of 0 has no influence, rather
+      than placing the influenced object at the origin
    Fixed interpolation problem with translation keyframes on looped animations
    Fixed translation of animation name copy/split in animation sets window
    Fixed initial rotation of points for frame animations
